--- a/QuickQuestions/app/src/main/res/layout/fragment_sign.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_sign.xml
@@ -59,6 +59,17 @@
 
         </RelativeLayout>
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/quicksand"
+            android:textColor="@color/textColorPrimary"
+            android:textSize="36sp"
+            android:text="Quick Questions" />
+
         <com.google.android.material.card.MaterialCardView
             android:layout_marginTop="48dp"
             android:layout_width="match_parent"
@@ -104,6 +115,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <RelativeLayout
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
