view model password and email control made

--- a/QuickQuestions/app/src/main/res/layout/fragment_sign.xml
+++ b/QuickQuestions/app/src/main/res/layout/fragment_sign.xml
@@ -105,7 +105,7 @@
                         android:orientation="vertical">
 
                         <com.google.android.material.textfield.TextInputLayout
-                            android:id="@+id/sign_in_email_text"
+                            android:id="@+id/sign_in_email_input"
                             style="@style/Base.Widget.MaterialComponents.TextInputLayout."
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -114,6 +114,7 @@
                             app:startIconDrawable="@drawable/ic_mail">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/sign_in_email_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:inputType="textEmailAddress"
@@ -121,15 +122,18 @@
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/sign_in_password_input"
                             style="@style/Base.Widget.MaterialComponents.TextInputLayout."
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
                             android:hint="@string/password"
                             app:endIconMode="password_toggle"
                             app:errorEnabled="true"
                             app:startIconDrawable="@drawable/ic_lock">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/sign_in_password_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:inputType="textPassword" />
